<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:background="@color/bgColor">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/registor_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/register_margin_each_model"
            android:textColor="@color/rayblue"
            android:textSize="26sp"/>


        <TextView
            android:id="@+id/countryTipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/register_margin_each_model"
            android:textSize="@dimen/register_text_size"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:id="@+id/countryRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_bg_edit">

            <TextView
                android:id="@+id/countryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/china"
                android:layout_centerVertical="true"
                android:textSize="@dimen/register_text_size"
                android:textColor="@color/rayblue"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/countryCodeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/register_text_size"
                android:textColor="@color/rayblue"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/userTipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/user"
            android:layout_marginTop="@dimen/register_margin_each_model"
            android:textSize="@dimen/register_text_size"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/userEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneOrEmail"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/imageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/graphic_verification_code"
            android:layout_marginTop="@dimen/reset_margin_each_model"
            android:textSize="@dimen/reset_text_size"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/imageEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_numbers_letters"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="@dimen/reset_text_size"
                android:textColorHint="@color/gray"
                android:layout_toStartOf="@id/imageIv"
                android:lines="1"
                android:ellipsize="end"
                android:layout_marginStart="15dp" />


            <ImageView
                android:id="@+id/imageIv"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/verifyCodeTipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/verification"
            android:layout_marginTop="@dimen/register_margin_each_model"
            android:textSize="@dimen/register_text_size"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/verifyCodeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterVerification"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/gray"
                android:inputType="number"
                android:layout_toStartOf="@id/sendTv"
                android:layout_marginStart="15dp"/>


            <TextView
                android:id="@+id/sendTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/register_text_size"
                android:textColor="@color/rayblue"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_corner"
                android:layout_centerVertical="true"
                android:textAllCaps="false"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
