<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textColor="@color/rayblue"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/white"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="1.5dp"/>


    <TextView
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/rayblue"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/white"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/rayblue"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/white"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"/>

</LinearLayout>