<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.help.ServicePrivacyActivity"
    android:orientation="vertical"
    android:background="@color/bgColor">

    <include layout="@layout/title"/>

    <LinearLayout
        android:id="@+id/warmingLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:text="Tip:"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/rayblue"/>

        <TextView
            android:id="@+id/tv_setting_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/rayblue"
            android:text="@string/serviceTip"
            android:textSize="14sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rayblue"
            android:text="@string/saverBettery"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rayblue1"
            android:text="@string/bettyContent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rayblue"
            android:text="@string/protect"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15sp"/>

        <RadioGroup
            android:id="@+id/upRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/huaweiRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/huawei"
                android:checked="true"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black" />
            <RadioButton
                android:id="@+id/vivoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vivo"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>
            <RadioButton
                android:id="@+id/oppoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oppo"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/lenovoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lenovo"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/downRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/sumsunRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/samsun"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"
                />
            <RadioButton
                android:id="@+id/miRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mi"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>
            <RadioButton
                android:id="@+id/onePlusRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oneplus"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/meizuRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meizu"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:background="@drawable/radio_box_bg"
                android:textColor="@color/black"/>

        </RadioGroup>

        <WebView
            android:id="@+id/contentWeb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>



</LinearLayout>