<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/bg_aler_dialog">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Dialog标题"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/rayblue"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/msgTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="xxxxxxxx"
        android:textColor="@color/rayblue"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/privacyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="6dp"
        android:textColor="@color/blue"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/gray"></View>

        <Button
            android:id="@+id/btn_comfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>